--- a/winkelwagen.html
+++ b/winkelwagen.html
@@ -25,6 +25,7 @@
       <button class="btn" onclick="localStorage.removeItem('nttwCart'); renderCart();">
         Winkelwagen leegmaken
       </button>
+	  	        <a href="index.html" class="btn">Terug naar start</a>
     </div>
   </main>
 
