--- a/nieuws.html
+++ b/nieuws.html
@@ -42,9 +42,21 @@
   </header>
 
   <main>
+  
+      <!-- NTTW Original -->
+    <article>
+      <h2>No Time To Waste<br>Escape to Higher Ground</h2>
+      <img src="images/nttw_original.jpg" alt="NTTW original">
+      <p>
+        No Time To Waste - Escape to Higher Ground<br>
+		Na een lange periode van ontwikkelen, testen en verfijnen is het eindelijk zover:<br>No Time To Waste (NTTW) is nu beschikbaar in onze webshop!
+<br>Het spannende bordspel waarin spelers moeten overleven in een wereld die langzaam door het water wordt verzwolgen.<br><b>Solo</b> als tegenstanders of <b>coöperatief</b>, bereik gezamenlijk de finish.<br>Welke variant je ook kiest, volledig of aangepast aan speelduur of spelers niveau, NTTW heeft het allemaal en zal zeker niet teleurstellen. 
+      </p>
+    </article>
+  
     <!-- NTTW Pentagon -->
     <article>
-      <h2>NTTW Pentagon</h2>
+      <h2>No Time To Waste - Pentagon</h2>
       <img src="images/pentagon.png" alt="NTTW Pentagon">
       <p>
         De nieuwe Pentagon-variant van NTTW biedt ruimte aan vijf spelers en maakt het spel strategischer.
@@ -56,7 +68,7 @@
 
     <!-- NTTW Hexagon -->
     <article>
-      <h2>NTTW Hexagon</h2>
+      <h2>No Time To Waste - Hexagon</h2>
       <img src="images/hexagon.jpg" alt="NTTW Hexagon">
       <p>
         De Hexagon-uitbreiding breidt het bord uit naar zes zijden, waardoor er nóg meer spelers en uitdagingen
@@ -68,7 +80,7 @@
 	
 	    <!-- NTTW Een Neuwe IJstijd -->
     <article>
-      <h2>NTTW IJstijd</h2>
+      <h2>No Time To Waste - IJstijd</h2>
       <img src="images/ijstijd.jpg" alt="NTTW Een Nieuwe IJstijd">
       <p>
  Wat als niet het water, maar de kou oprukt? In dit scenario kantelt de aarde en verandert het klimaat op het Noordlijk Halfrond in een ijzige nachtmerrie. Nieuwe structures en uitdagingen wachten op ontdekking. NTTW Een Nieuwe IJstijd is nog in ontwikkeling, maar de kou komt onherroepelijk dichterbij…
@@ -77,7 +89,7 @@
 	
 		    <!-- NTTW Exodus Mars -->
     <article>
-      <h2>NTTW Exodus naar Mars</h2>
+      <h2>No Time To Waste - Exodus naar Mars</h2>
       <img src="images/mars.jpg" alt="NTTW Exodus naar Mars">
       <p>
 Wanneer de aarde definitief onleefbaar wordt, rest de mensheid nog één uitweg: de sprong naar Mars. Maar ook daar is overleven niet vanzelfsprekend. Exodus naar Mars is een visie op de toekomst van NTTW – nog slechts een idee, maar misschien wel de volgende reis.
