--- a/producten.html
+++ b/producten.html
@@ -54,7 +54,8 @@
     <p>Op dit moment hebben we alleen de complete basisdoos NTTW.</p>
   </header>
 
-  <main>
+<main>
+  <div class="product-wrapper">
     <!-- Basisspel -->
     <article class="product">
       <h2>NTTW - Basisdoos</h2>
@@ -64,7 +65,14 @@
         Voeg toe aan winkelwagen
       </button>
     </article>
-  </main>
+
+    <!-- Afbeelding naast het kader -->
+    <div class="product-side-image">
+      <img src="images/nttw_overview.jpg" alt="Nttw_Overview">
+    </div>
+  </div>
+</main>
+
 
   <footer>
     <div>
