--- a/winkelwagen.html
+++ b/winkelwagen.html
@@ -12,6 +12,7 @@
   </header>
 
   <main>
+  <div class="winkelwagen-text-content">   <!-- 🔹 hier toegevoegd -->
     <!-- Hier komen de producten dynamisch -->
     <div id="cart-items"></div>
 
