--- a/producten.html
+++ b/producten.html
@@ -1,6 +1,26 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
+<!-- Font Awesome voor social icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NTTW Webshop - Producten</title>
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Hier plak je de Open Graph en Twitter meta-tags -->
+  <meta property="og:title" content="No Time To Waste (NTTW) - Bordspel"/>
+  <meta property="og:description" content="Ontdek NTTW: solo of coöperatief overleven met het unieke onderwater zetten systeem! Nu beschikbaar in onze webshop."/>
+  <meta property="og:image" content="https://bg-nttw-2025.github.io/NTTW_Online/images/nttw_overview.jpg"/>
+  <meta property="og:url" content="https://bg-nttw-2025.github.io/NTTW_Online/producten.html"/>
+  <meta property="og:type" content="website"/>
+
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:title" content="No Time To Waste (NTTW) - Bordspel"/>
+  <meta name="twitter:description" content="Ontdek NTTW: solo of coöperatief overleven met het unieke onderwater zetten systeem! Nu beschikbaar in onze webshop."/>
+  <meta name="twitter:image" content="https://bg-nttw-2025.github.io/NTTW_Online/images/nttw_overview.jpg"/>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NTTW Webshop - Producten</title>
@@ -79,6 +99,31 @@
       <a href="index.html" class="btn">Terug naar start</a>
       <a href="winkelwagen.html" class="btn">Bekijk winkelwagen</a>
     </div>
+	<div class="social-share">
+  <p>Deel dit product:</p>
+
+  <!-- Facebook -->
+  <a class="btn" 
+     href="https://www.facebook.com/sharer/sharer.php?u=https://bg-nttw-2025.github.io/NTTW_Online/producten.html" 
+     target="_blank" rel="noopener noreferrer">
+    <i class="fab fa-facebook-f"></i> Facebook
+  </a>
+
+  <!-- Twitter -->
+  <a class="btn" 
+     href="https://twitter.com/intent/tweet?text=Ontdek+No+Time+To+Waste+(NTTW)+in+de+webshop!&url=https://bg-nttw-2025.github.io/NTTW_Online/producten.html" 
+     target="_blank" rel="noopener noreferrer">
+    <i class="fab fa-twitter"></i> Tw… X? Neh, gewoon Twitter &#128521;
+  </a>
+
+  <!-- LinkedIn -->
+  <a class="btn" 
+     href="https://www.linkedin.com/shareArticle?mini=true&url=https://bg-nttw-2025.github.io/NTTW_Online/producten.html&title=No+Time+To+Waste+(NTTW)&summary=Solo+of+coöperatief+overleven+met+het+bordspel+NTTW.&source=NTTW+Webshop" 
+     target="_blank" rel="noopener noreferrer">
+    <i class="fab fa-linkedin-in"></i> LinkedIn
+  </a>
+</div>
+
     <p>&copy; 2025 NTTW Webshop | Demo</p>
   </footer>
 
