--- a/producten.html
+++ b/producten.html
@@ -122,6 +122,14 @@
      target="_blank" rel="noopener noreferrer">
     <i class="fab fa-linkedin-in"></i> LinkedIn
   </a>
+  
+  <!-- Uitgebreide WhatsApp share knop -->
+<a class="btn whatsapp-btn" 
+   href="https://wa.me/?text=Ontdek%20No%20Time%20To%20Waste%20(NTTW)%20in%20de%20webshop!%20https://bg-nttw-2025.github.io/NTTW_Online/producten.html" 
+   target="_blank" rel="noopener noreferrer">
+  <i class="fab fa-whatsapp"></i> Deel via WhatsApp
+</a>
+
 </div>
 
     <p>&copy; 2025 NTTW Webshop | Demo</p>
