--- a/producten.html
+++ b/producten.html
@@ -84,6 +84,10 @@
       <button class="btn" onclick='voegProductToe({name:"NTTW - Basisdoos", price:39.95})'>
         Voeg toe aan winkelwagen
       </button>
+	  <button class="btn" onclick="location.href='nttw_basisdoos.html'">
+  Meer info
+</button>
+
     </article>
 
     <!-- Afbeelding naast het kader -->
@@ -113,7 +117,7 @@
   <a class="btn" 
      href="https://twitter.com/intent/tweet?text=Ontdek+No+Time+To+Waste+(NTTW)+in+de+webshop!&url=https://bg-nttw-2025.github.io/NTTW_Online/producten.html" 
      target="_blank" rel="noopener noreferrer">
-    <i class="fab fa-twitter"></i> Tw… X? Neh, gewoon Twitter &#128521;
+    <i class="fab fa-twitter"></i> Tw… X? Neh, gewoon Twitter &#x1F609; 
   </a>
 
   <!-- LinkedIn -->
