--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   <header>
-    <h1>Welkom bij de NTTW Webshop</h1>
+    <h1>Welkom bij de No Time To Waste Webshop</h1>
     <p>Ontdek ons bordspel en wees als eerste op de hoogte van nieuwe uitgaven!</p>
   </header>
 
