--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- Formulier aanmelden nieuwsbrief -->
     <div class="form-container">
       <h2>Schrijf je in</h2>
-      <p>Wil je als eerste weten wanneer NTTW wordt uitgebracht? Laat je e-mail achter:</p>
+      <p>Wil je het laatste nieuws als eerste weten over NTTW? Laat dan je e-mail achter:</p>
 
       <!-- vervang 'your-form-id' door je echte Formspree ID -->
       <form id="aanmeldForm" action="https://formspree.io/f/xblknnya" method="POST">
