--- a/index.html
+++ b/index.html
@@ -100,5 +100,12 @@
       }
     });
   </script>
+  <footer style="background:#f2f2f2; padding:20px; text-align:center; font-size:14px; color:#555; margin-top:40px;">
+  <p><strong>Privacyverklaring</strong></p>
+  <p>Deze webshop gebruikt geen cookies en verzamelt geen persoonsgegevens.<br>
+  Alle getoonde producten en functionaliteiten zijn uitsluitend ter demonstratie.</p>
+  <p style="font-size:12px; color:#999;">&copy; 2025 NTTW Demo Webshop</p>
+</footer>
+
 </body>
 </html>
